[package]
name = "oh"
version = "0.0.1"
edition = "2021"
license = "AGPL-3"
keywords = ["installer", "linux", "archlinux", "gentoo", "distribution"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["Willy Micieli"]
repository = "https://github.com/otechdo/oh"
description = "A archlinux installer and manager"

[dependencies]
inquire = { version = "0.7.5", optional = true }
indicatif = { version = "0.17.8", optional = true }
ask_gemini = { version = "0.1.4", optional = true }
tokio = { version = "1.40.0", optional = true }
ratatui-textarea = { version = "0.4.1", optional = true }
ratatui = { version = "0.28.1", optional = true }
clap = { version = "4.5.18", optional = true }
chrono = "0.4.38"

[features]
ask = ["inquire", "inquire/editor", "inquire/date", "inquire/default"]
ai = ["ask_gemini", "ask", "tokio/full", "tokio"]
ui = ["ai", "ratatui/all-widgets", "ratatui-textarea/search", "ratatui-textarea/ratatui", "ratatui-textarea/crossterm"]
cli = ["clap"]
full = ["ui","ai","cli"]
