[package]
name = "oh"
version = "0.0.1"
edition = "2021"
license = "AGPL-3"
keywords = ["installer", "gentoo", "archlinux", "linux", "distribution"]
categories = ["command-line-utilities"]
readme = "README.md"
authors = ["Willy Micieli"]
repository = "https://github.com/otechdo/oh"
description = "An installer for gentoo and archlinux"

[dependencies]
inquire = { version = "0.7.5", optional = true }
indicatif = { version = "0.17.8", optional = true }
ask_gemini = { version = "0.1.4", optional = true }
tokio = { version = "1.40.0", optional = true }
clap = { version = "4.5.18", optional = true }
chrono = "0.4.38"
reqwest = { version = "0.12.7", optional = true }
tar = { version = "0.4.42", optional = true }
xz2 = { version = "0.1.7", optional = true }
flate2 = { version = "1.0.34", optional = true }

[features]
ask = ["inquire", "inquire/editor", "inquire/date", "inquire/default"]
ai = ["ask_gemini", "ask", "tokio/full", "tokio"]
cli = ["clap"]
full = ["ai", "cli"]
archlinux = ["cli", "ask"]
archive = ["tar", "tar/xattr", "tar/default", "flate2/default", "xz2/tokio", "xz2"]
req = ["reqwest", "reqwest/blocking"]
gentoo = ["cli", "ask", "archive", "req"]
